--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Swashbukle.AspNetCore" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
